[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
env_logger = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-context = "*"
maelstrom-node="*"

[[bin]]
name = "echo"
[[bin]]
name = "unique_ids"
[[bin]]
name = "broadcast"
